RESOLVED FIXED308864
[IFC] youtube.com ASSERT(inlineTextBox->style().whiteSpaceCollapse() != WhiteSpaceCollapse::Preserve)
https://bugs.webkit.org/show_bug.cgi?id=308864
Summary [IFC] youtube.com ASSERT(inlineTextBox->style().whiteSpaceCollapse() != White...
alan
Reported 2026-02-27 20:05:19 PST
ssia
Attachments
Patch (6.32 KB, patch)
2026-02-27 20:23 PST, alan
no flags
[fast-cq]Patch (7.21 KB, patch)
2026-02-28 05:29 PST, alan
no flags
alan
Comment 1 2026-02-27 20:23:06 PST
alan
Comment 2 2026-02-28 05:29:55 PST
Created attachment 478527 [details] [fast-cq]Patch
EWS
Comment 3 2026-03-02 05:02:00 PST
Committed 308453@main (66f1fe7208f2): <https://commits.webkit.org/308453@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478527 [details].
Radar WebKit Bug Importer
Comment 4 2026-03-02 05:02:13 PST
Note You need to log in before you can comment on or make changes to this bug.