[IFC] youtube.com ASSERT(inlineTextBox->style().whiteSpaceCollapse() != WhiteSpaceCollapse::Preserve) https://bugs.webkit.org/show_bug.cgi?id=308864

Reviewed by Antti Koivisto.

Do not use fast (no line builder is required) codepath when the enclosing inline box is not eligible.

e.g.
<div>                                <- block container style is eligible
  <span style="white-space: pre">    <- inline box style is not
   some text

Test: fast/text/min-content-width-assert-with-inline-box.html

* LayoutTests/fast/text/min-content-width-assert-with-inline-box-expected.html: Added.
* LayoutTests/fast/text/min-content-width-assert-with-inline-box.html: Added.
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::isContentEligibleForNonLineBuilderMinimumWidth):
(WebCore::Layout::IntrinsicWidthHandler::minimumContentSize):
  It's not sufficient to check the block container whether the style is sufficient
  when it is enclosed by an inline box, we have to check the style that applies
  directly to the text content (innermost "container")

Canonical link: https://commits.webkit.org/308453@main